--- a/fase5/fase5.html
+++ b/fase5/fase5.html
@@ -1,46 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Fase 5 – Control</title>
-  <style>/* mismo CSS */</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fase 5 - Control. Diagrama de Gantt</title>
+ <link rel="stylesheet" href="/CSS/style.css" />
+ <link rel="stylesheet" href="/fase5/fase5.css" />
 </head>
 <body>
-  <header><h1>Proyecto sobre Manejo de Residuos Sólidos</h1></header>
-  <nav><!-- menú relativo -->
-    <a href="index.html">Inicio</a>
-    <a href="objetivo_general.html">Objetivo General</a>
-    <a href="objetivo_especifico.html">Objetivos Específicos</a>
-    <a href="justificacion.html">Justificación</a>
+  <header>
+    <h1>Proyecto sobre Manejo de Residuos Sólidos</h1>
+  </header>
+
+  <nav>
+    <a href="/index.html">Inicio</a>
+    <a href="/objetivo_general.html">Objetivo General</a>
+    <a href="/objetivo_especifico.html">Objetivos Específicos</a>
+    <a href="/justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
-    <a href="fase3/index.html">Fase 3</a>
-    <a href="fase4/index.html">Fase 4</a>
-    <a href="fase5/index.html">Fase 5</a>
-    <a href="fase6/index.html">Fase 6</a>
+    <a href="/fase3/fase3.html">Fase 3</a>
+    <a href="/fase4/fase4.html">Fase 4</a>
+    <a href="/fase5/fase5.html">Fase 5</a>
+    <a href="/fase6/fase6.html">Fase 6</a>
   </nav>
+
   <main>
-    <h2>Fase 5: Control del proyecto – Diagrama de Gantt</h2>
-    <h3>Planificación por fases</h3>
-    <table>
-      <thead>
-        <tr><th>Fase</th><th>Actividad</th><th>Tarea</th><th>Duración</th><th>Inicio</th><th>Término</th><th>Responsable</th><th>Materiales</th><th>Tecnológicos</th><th>Financieros</th></tr>
-      </thead>
-      <tbody>
-        <tr><td rowspan="3">Fase inicial</td><td rowspan="3">Investigación</td><td>Analizar tiendas</td><td>1 semana</td><td>16/06/2025</td><td>20/08/2025</td><td>Voluntarios</td><td>Laptop, libreta</td><td>Internet</td><td>$120 MXN</td></tr>
-        <!-- resto de filas -->
-      </tbody>
-    </table>
-    <div style="text-align:center;margin:30px 0;">
-      <h3>Diagrama de Gantt</h3>
-      <img src="../img/diagrama_gantt_fase5.png" alt="Gantt" style="max-width:100%;border:1px solid #ccc;"/>
+    <h2>Fase 5: Control. Diagrama de Gantt para gestión del proyecto</h2>
+
+    <h3>Tabla de planificación</h3>
+    
+    <div style="text-align: center; margin: 20px 0;">
+      <img class="imagen" src="/img/tabla fase 5.png" alt="Tabla de planificación del proyecto" class="img-tabla-fase5" />
     </div>
+
+    <h3>Diagrama de Gantt</h3>
+   
+    <div style="text-align: center; margin: 20px 0;">
+      <img class="imagen" src="/img/Diagrama de Gantt.png" alt="Diagrama de Gantt del proyecto" class="img-diagrama-gantt" />
+    </div>
+
     <h3>Referencias</h3>
     <ul>
-      <li>Huerta, A. A. (2025). Fase 4…</li>
-      <li>Prepa en Línea SEP. (s.f.). Diagrama de barras…</li>
-      <li>ENRIQUE XLS. (2023). Cómo hacer…</li>
+      <p><li>Abraham Alejandro Huerta. (2025). Actividad integradora Fase 4:
+         Dirección. División del trabajo [PDF]. Prepa en línea SEP. <a href="/fase4/fase4.html"> Fase 4</a></li></p>
+
+      <p><li>Prepa en línea SEP. (s.f.). Diagrama de barras y método de la 
+        ruta crítica [PDF]. Módulo 23 Tecnologías emergentes para la 
+        administración y gestión.</li></p>
+
+      <p><li>ENRIQUE XLS. (2023). Cómo HACER un DIAGRAMA DE GANTT en Excel PASO A 
+        PASO 2025 [Video]. Youtube. <a href="https://www.youtube.com/watch?v=wtcPMql1o2g&t
+        =1s&ab_channel=ENRIQUEXLS">https://www.youtube.com/watch?v=wtcPMql1o2g&t
+        =1s&ab_channel=ENRIQUEXLS</a> </li></p>
     </ul>
   </main>
-  <footer><p>&copy; 2025 Prepa en Línea SEP</p></footer>
+
+  <footer>
+    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+    <div class="social-links">
+      <a href="https://facebook.com" target="_blank">Facebook</a> |
+      <a href="https://twitter.com" target="_blank">Twitter</a> |
+      <a href="https://instagram.com" target="_blank">Instagram</a> |
+      <a href="https://youtube.com" target="_blank">YouTube</a>
+    </div>
+  </footer>
 </body>
 </html>
+
