--- a/fase6/fase6.html
+++ b/fase6/fase6.html
@@ -1,46 +1,100 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Fase 6 – Medición y corrección</title>
-  <style>/* mismo CSS */</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fase 6 - Control. Medir y corregir</title>
+ <link rel="stylesheet" href="/CSS/style.css" />
+  <link rel="stylesheet" href="/fase6/fase6.css" />
 </head>
 <body>
-  <header><h1>Proyecto sobre Manejo de Residuos Sólidos</h1></header>
+  <header>
+    <h1>Proyecto sobre Manejo de Residuos Sólidos</h1>
+  </header>
+
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="objetivo_general.html">Objetivo General</a>
-    <a href="objetivo_especifico.html">Objetivos Específicos</a>
-    <a href="justificacion.html">Justificación</a>
+    <a href="/index.html">Inicio</a>
+    <a href="/objetivo_general.html">Objetivo General</a>
+    <a href="/objetivo_especifico.html">Objetivos Específicos</a>
+    <a href="/justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
-    <a href="fase3/index.html">Fase 3</a>
-    <a href="fase4/index.html">Fase 4</a>
-    <a href="fase5/index.html">Fase 5</a>
-    <a href="fase6/index.html">Fase 6</a>
+    <a href="/fase3/fase3.html">Fase 3</a>
+    <a href="/fase4/fase4.html">Fase 4</a>
+    <a href="/fase5/fase5.html">Fase 5</a>
+    <a href="/fase6/fase6.html">Fase 6</a>
   </nav>
+
   <main>
-    <h2>Fase 6: Medición y corrección</h2>
-    <h3>Escenarios del proyecto</h3>
-    <table>
-      <thead><tr><th>Descripción</th><th>Solución</th><th>Acciones</th></tr></thead>
-      <tbody>
-        <tr><td>Escenario óptimo…</td><td>Fortalecer…</td><td>- Reconocer…</td></tr>
-        <tr><td>Escenario negativo…</td><td>Reevaluar…</td><td>- Modificar…</td></tr>
-      </tbody>
-    </table>
-    <h3>Reflexión</h3>
-    <p><strong>a.</strong> Estándares de tiempo…</p>
-    <p><strong>b.</strong> Avance de tareas…</p>
-    <p><strong>c.</strong> Cuantitativos, temporales…</p>
-    <h3>10 estándares</h3>
+    <h2>Fase 6: Control. Medir y corregir</h2>
+
+    <h3>Tabla de escenarios</h3>
+   
+    <div style="text-align: center; margin: 20px 0;">
+      <img src="/img/Tabla escenarios.png" alt="Tabla de escenarios del proyecto" class="img-tabla-fase6" />
+    </div>
+
+    <h3>Reflexiona</h3>
+    <p><strong>a. ¿Qué estándares te servirían para identificar el peor de los escenarios?</strong><br></p>
+
+    <p>Para detectar el peor de los escenarios se deben establecer estándares de tiempo (para detectar 
+    retrasos en las fases), participación (porcentaje de personas involucradas), y técnicos 
+    (fallos en la aplicación o sensores). Estos indicadores permiten anticipar problemas críticos, 
+    como la ineficiencia en las actividades o la falta de recursos para continuar, y actuar a tiempo.</p>
+
+    <p><strong>b. ¿Qué estándares te servirían como guía para cerciorarte de que las acciones propuestas 
+      para mejorar el desarrollo de tu proyecto son adecuadas?</strong><br></p>
+
+   <p>Los estándares de seguimiento adecuados serían aquellos que permiten medir el avance de las tareas 
+    y la efectividad de las soluciones implementadas, como la tasa de uso de la app, el número de 
+    residuos recolectados correctamente, la asistencia a talleres, y la puntualidad en el cumplimiento 
+    del cronograma. Estos indicadores permiten ajustar la estrategia en tiempo real.</p>
+
+    <p><strong>c. ¿De qué tipo tendrían que ser los estándares para medir los resultados de tu 
+      proyecto? Pueden ser de calidad, cantidad, tiempo, finanzas, etc. ¿Por qué?</strong><br></p>
+
+    <p>Deben ser de tipo cuantitativo (cantidad de residuos recolectados, número de usuarios 
+    activos en la app), temporal (cumplimiento de plazos por semana), económico (uso eficiente 
+    del presupuesto) y de calidad (satisfacción de los usuarios). Estos estándares son útiles 
+    porque permiten medir de forma objetiva si se están cumpliendo las metas del proyecto y 
+    dónde se pueden hacer mejoras.</p>
+
+    <h3>10 estándares para dar seguimiento al proyecto</h3>
     <ul>
-      <li>Proporción de tareas…</li><li>Opinión de usuarios…</li><!-- etc -->
+      <p><li>Proporción de tareas realizadas en las fechas establecidas según el plan semanal.</li></p>
+      <p><li>Opinión general de los usuarios sobre la app, obtenida mediante formularios de retroalimentación.</li></p>
+      <p><li>Número total de veces que los videos informativos han sido vistos en redes sociales.</li></p>
+      <p><li>Cantidad aproximada de desechos clasificados y recogidos adecuadamente en los puntos donde 
+        se implementó el proyecto.</li></p>
+      <p><li>Cantidad de sensores instalados que se mantienen operando sin fallas.</li></p>
+      <p><li>Participación semanal de la comunidad en eventos y talleres presenciales.</li></p>
+      <p><li>Tiempo promedio de respuesta ante errores técnicos reportados por usuarios.</li></p>
+      <p><li>Porcentaje de presupuesto ejecutado conforme a lo planeado.</li></p>
+      <p><li>Frecuencia con la que se actualiza el contenido educativo en la app.</li></p>
+      <p><li>Porcentaje de metas del proyecto alcanzadas en cada fase del cronograma.</li></p>
     </ul>
+
     <h3>Referencias</h3>
     <ul>
-      <li>Prepa en Línea SEP. (s.f.). Unidades 1–3…</li>
+      <p><li>Prepa en línea SEP. (s.f.). Unidad 1 contenido extendido [PDF]. 
+        Módulo 23 Tecnologías emergentes para la administración y gestión.</li></p>
+
+      <p><li>Prepa en línea SEP. (s.f.). Unidad 2 contenido extendido [PDF].
+        Módulo 23 Tecnologías emergentes para la administración y gestión.</li></p>
+
+      <p><li>Prepa en línea SEP. (s.f.). Unidad 3 contenido extendido [PDF].
+        Módulo 23 Tecnologías emergentes para la administración y gestión.</li></p>
     </ul>
   </main>
-  <footer><p>&copy; 2025 Prepa en Línea SEP</p></footer>
+
+  <footer>
+    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+    <div class="social-links">
+      <a href="https://facebook.com" target="_blank">Facebook</a> |
+      <a href="https://twitter.com" target="_blank">Twitter</a> |
+      <a href="https://instagram.com" target="_blank">Instagram</a> |
+      <a href="https://youtube.com" target="_blank">YouTube</a>
+    </div>
+  </footer>
 </body>
 </html>
