--- a/fase1/fase1.html
+++ b/fase1/fase1.html
@@ -1,57 +1,91 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Fase 1 - Presentación</title>
-  <link rel="stylesheet" href="/CSS/style.css" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fase 1 - Presentación</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh; }
+    header, footer { background: #333; color: #fff; padding: 10px 20px; text-align: center; }
+    nav { background: #444; overflow: hidden; }
+    nav a { float: left; color: #fff; padding: 14px 16px; text-decoration: none; }
+    nav a:hover { background: #ddd; color: #000; }
+    main { flex: 1; padding: 20px; max-width: 1000px; margin: auto; background: white; }
+    .carousel-container { text-align: center; position: relative; max-width: 800px; margin: 20px auto; }
+    .carousel-container img { width: 100%; height: auto; display: none; transition: opacity 0.5s ease-in-out; }
+    .carousel-container img.active { display: block; }
+    .controls { margin-top: 10px; }
+    .controls button { padding: 10px 20px; margin: 5px; cursor: pointer; }
+    .social-links a { margin: 0 10px; text-decoration: none; color: white; }
+  </style>
+  <link rel="stylesheet" href="/fase1/fase1.css" />
 </head>
 <body>
   <header><h1>Proyecto sobre Manejo de Residuos Sólidos</h1></header>
   <nav>
     <a href="/index.html">Inicio</a>
-    <a href="objetivo_general.html">Objetivo General</a>
-    <a href="objetivo_especifico.html">Objetivos Específicos</a>
-    <a href="justificacion.html">Justificación</a>
+    <a href="/objetivo_general.html">Objetivo General</a>
+    <a href="/objetivo_especifico.html">Objetivos Específicos</a>
+    <a href="/justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
-    <a href="fase3/index.html">Fase 3</a>
-    <a href="fase4/index.html">Fase 4</a>
-    <a href="fase5/index.html">Fase 5</a>
-    <a href="fase6/index.html">Fase 6</a>
+    <a href="/fase3/fase3.html">Fase 3</a>
+    <a href="/fase4/fase4.html">Fase 4</a>
+    <a href="/fase5/fase5.html">Fase 5</a>
+    <a href="/fase6/fase6.html">Fase 6</a>
   </nav>
-  <main class="carousel">
-    <img src="../img/1.svg" class="active" alt="Slide 1"/>
-    <img src="../img/2.svg" alt="Slide 2"/>
-    <img src="../img/3.svg" alt="Slide 3"/>
-    <img src="../img/4.svg" alt="Slide 4"/>
-    <img src="../img/5.svg" alt="Slide 5"/>
-    <img src="../img/6.svg" alt="Slide 6"/>
-    <img src="../img/7.svg" alt="Slide 7"/>
-    <img src="../img/8.svg" alt="Slide 8"/>
-    <div class="controls">
-      <button onclick="changeSlide(-1)">⟵ Anterior</button>
-      <button onclick="changeSlide(1)">Siguiente ⟶</button>
+  <h1 class="titulo">Fase 1: Planificación. Objetivos-metas</h1>
+  <main>
+    <div class="carousel-container">
+      <img src="../img/1.svg" class="active" alt="Slide 1"/>
+      <img src="../img/2.svg" alt="Slide 2"/>
+      <img src="../img/3.svg" alt="Slide 3"/>
+      <img src="../img/4.svg" alt="Slide 4"/>
+      <img src="../img/5.svg" alt="Slide 5"/>
+      <img src="../img/6.svg" alt="Slide 6"/>
+      <img src="../img/7.svg" alt="Slide 7"/>
+      <img src="../img/8.svg" alt="Slide 8"/>
+      
+      <div class="controls">
+        <button class="button" id="prev">⟵ Anterior</button>
+        <button class="button" id="next">Siguiente ⟶ </button>
+      </div>
     </div>
   </main>
-</div>
-</main>
-<footer>
-  <p>&copy; 2025 Prepa en Línea SEP</p>
-  <div class="social-links">
-    <span>Síguenos:</span>
-    <a href="https://facebook.com/ReciclaCancun" target="_blank">Facebook</a>
-    <a href="https://twitter.com/ReciclaCancun" target="_blank">Twitter</a>
-    <a href="https://instagram.com/ReciclaCancun" target="_blank">Instagram</a>
-    <a href="https://youtube.com/ReciclaCancun" target="_blank">YouTube</a>
-  </div>
-  <footer><p>&copy; 2025 Prepa en Línea SEP</p></footer>
+  <footer>
+    <p>&copy; 2025 Prepa en Línea SEP</p>
+    <div class="social-links">
+      <a href="https://facebook.com" target="_blank">Facebook</a> |
+      <a href="https://twitter.com" target="_blank">Twitter</a> |
+      <a href="https://instagram.com" target="_blank">Instagram</a> |
+      <a href="https://youtube.com" target="_blank">YouTube</a>
+    </div>
+  </footer>
   <script>
-    let current=0,slides=document.querySelectorAll('.carousel img');
-    function changeSlide(d){
-      slides[current].classList.remove('active');
-      current=(current+d+slides.length)%slides.length;
-      slides[current].classList.add('active');
-    }
-  </script>
+    const slides = document.querySelectorAll('.carousel-container img');
+    let current = 0;
 
+    function showSlide(index) {
+      slides.forEach((slide, i) => {
+        slide.classList.toggle('active', i === index);
+      });
+    }
+
+    document.getElementById('prev').addEventListener('click', () => {
+      current = (current - 1 + slides.length) % slides.length;
+      showSlide(current);
+    });
+
+    document.getElementById('next').addEventListener('click', () => {
+      current = (current + 1) % slides.length;
+      showSlide(current);
+    });
+
+    // Optional: Auto-slide every 5 seconds
+    // setInterval(() => {
+    //   current = (current + 1) % slides.length;
+    //   showSlide(current);
+    // }, 5000);
+  </script>
 </body>
 </html>
