--- a/fase4/fase4.html
+++ b/fase4/fase4.html
@@ -13,10 +13,10 @@
   </header>
 
   <nav>
-   <a href="index.html">Inicio</a>
-    <a href="objetivo_general.html">Objetivo General</a>
-    <a href="objetivo_especifico.html">Objetivos Específicos</a>
-    <a href="justificacion.html">Justificación</a>
+    <a href="/index.html">Inicio</a>
+    <a href="/objetivo_general.html">Objetivo General</a>
+    <a href="/objetivo_especifico.html">Objetivos Específicos</a>
+    <a href="/justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
     <a href="/fase3/fase3.html">Fase 3</a>
@@ -42,42 +42,47 @@
 
     <h3>Preguntas</h3>
     <p><strong>a. ¿Cuál es la importancia de la división del trabajo en la etapa 
-      de la organización?</strong><br>
-    La asignación de roles específicos de acuerdo con las aptitudes de cada persona 
-    resulta crucial, permitiendo así un avance más rápido del proyecto. Al repartir
-    responsabilidades, se optimiza el tiempo y se disminuyen los errores al evitar 
-    que varias personas realicen la misma tarea sin coordinación. En el caso del proyecto
-     “Recicla Cancún”, esta distribución asegura que tanto la instalación de sensores
-      como las campañas educativas se realicen de forma clara, ordenada y con resultados efectivos.</p>
+      de la organización?</strong><br> La asignación de roles específicos de 
+      acuerdo con las aptitudes de cada persona resulta crucial, permitiendo 
+      así un avance más rápido del proyecto. Al repartir responsabilidades, 
+      se optimiza el tiempo y se disminuyen los errores al evitar que varias 
+      personas realicen la misma tarea sin coordinación. En el caso del proyecto 
+      “Recicla Cancún”, esta distribución asegura que tanto la instalación de 
+      sensores como las campañas educativas se realicen de forma clara, ordenada 
+      y con resultados efectivos.</p>
 
     <p><strong>b. ¿Es necesario integrar colaboradores en tu proyecto? ¿Por qué?</strong><br>
-    Sí, integrar colaboradores es indispensable porque el proyecto abarca áreas diversas como educación
-     ambiental, uso de tecnología, diseño digital y trabajo comunitario. Una sola persona difícilmente
-      podría realizar todas las tareas con la calidad requerida. Además, los colaboradores aportan 
-      ideas nuevas, habilidades complementarias y fortalecen el sentido de pertenencia al proyecto.
-       Su participación también amplía el alcance de las acciones, facilita el seguimiento de actividades 
-       y mejora los resultados obtenidos en cada una de las fases del plan.</p>
+    Sí, integrar colaboradores es indispensable porque el proyecto abarca áreas diversas 
+    como educación ambiental, uso de tecnología, diseño digital y trabajo comunitario. 
+    Una sola persona difícilmente podría realizar todas las tareas con la calidad requerida. 
+    Además, los colaboradores aportan ideas nuevas, habilidades complementarias y fortalecen 
+    el sentido de pertenencia al proyecto. Su participación también amplía el alcance de las 
+    acciones, facilita el seguimiento de actividades y mejora los resultados obtenidos en cada 
+    una de las fases del plan.</p>
 
-    <p><strong>c. En caso de no contar con colaboradores, ¿qué consecuencias habría para el desarrollo de tu proyecto?</strong><br>
-    Si no se cuenta con colaboradores, el proyecto enfrentaría varios problemas: sobrecarga de trabajo,
-     retrasos, calidad limitada en las actividades y bajo alcance de las campañas. Algunas tareas técnicas 
-     como la instalación de sensores o el diseño de materiales digitales podrían quedar incompletas o mal 
-     ejecutadas. Además, se pierde la posibilidad de generar un impacto colectivo, lo que afecta la 
-     sostenibilidad del proyecto. La falta de apoyo también disminuye la motivación y dificulta cumplir 
-     los objetivos propuestos a tiempo.</p>
+    <p><strong>c. En caso de no contar con colaboradores, ¿qué consecuencias habría para 
+      el desarrollo de tu proyecto?</strong><br>
+    Si no se cuenta con colaboradores, el proyecto enfrentaría varios problemas: sobrecarga 
+    de trabajo, retrasos, calidad limitada en las actividades y bajo alcance de las campañas. 
+    Algunas tareas técnicas como la instalación de sensores o el diseño de materiales digitales 
+    podrían quedar incompletas o mal ejecutadas. Además, se pierde la posibilidad de generar 
+    un impacto colectivo, lo que afecta la sostenibilidad del proyecto. La falta de apoyo 
+    también disminuye la motivación y dificulta cumplir los objetivos propuestos a tiempo.</p>
 
-    <p><strong>d. ¿Qué tecnologías podrían ayudarte a encontrar personas interesadas en participar en tu proyecto?</strong><br>
-    Algunas herramientas útiles para reclutar colaboradores son Facebook y WhatsApp, ya que permiten llegar 
-    rápidamente a personas de la comunidad. También LinkedIn es ideal para encontrar perfiles técnicos, 
-    mientras que Canva y Google Forms ayudan a crear convocatorias atractivas y formularios de registro. 
-    Sitios como Voluntariado.mx permiten conectar con ciudadanos dispuestos a colaborar. Estas plataformas 
-    facilitan la difusión del proyecto, el seguimiento de interesados y la organización de grupos de trabajo 
-    para acciones específicas dentro del plan.</p>
+    <p><strong>d. ¿Qué tecnologías podrían ayudarte a encontrar personas interesadas 
+      en participar en tu proyecto?</strong><br>
+    Algunas herramientas útiles para reclutar colaboradores son Facebook y WhatsApp, ya que 
+    permiten llegar rápidamente a personas de la comunidad. También LinkedIn es ideal para 
+    encontrar perfiles técnicos, mientras que Canva y Google Forms ayudan a crear convocatorias 
+    atractivas y formularios de registro. Sitios como Voluntariado.mx permiten conectar con 
+    ciudadanos dispuestos a colaborar. Estas plataformas facilitan la difusión del proyecto, 
+    el seguimiento de interesados y la organización de grupos de trabajo para acciones 
+    específicas dentro del plan.</p>
 
     <h3>Referencias</h3>
     <ul>
       <p><li>Abraham Alejandro Huerta. (2025). Actividad integradora Fase 3. 
-        Organización Actividades, tareas, recursos y procesos. Prepa en línea SEP.</li>
+        Organización Actividades, tareas, recursos y procesos. Prepa en línea SEP.<a href="/fase3/fase3.html"> Fase 3</a></li>
 
       <p><li>Prepa en línea SEP. (s.f.). Unidad 1 contenido extendido [PDF]. 
         Módulo 23 Tecnologías emergentes para la administración y gestión.</li>
