--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Proyecto sobre Manejo de Residuos Sólidos</h1>
   </header>
   <nav>
-    <a href="index.html">Inicio</a>
-    <a href="objetivo_general.html">Objetivo General</a>
-    <a href="objetivo_especifico.html">Objetivos Específicos</a>
-    <a href="justificacion.html">Justificación</a>
+    <a href="/index.html">Inicio</a>
+    <a href="/objetivo_general.html">Objetivo General</a>
+    <a href="/objetivo_especifico.html">Objetivos Específicos</a>
+    <a href="/justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
     <a href="/fase3/fase3.html">Fase 3</a>
@@ -28,7 +28,7 @@
       <div class="video-container">
       <h2>Video de presentación</h2>
       <video width="100%" controls>
-        <source src="video/Video Medio Ambiente Collage Verde.mp4" type="video/mp4">
+        <source src="" type="video/mp4">
         Tu navegador no soporta la reproducción de video.
         <!-- Video de presentación con controles personalizados -->
 <div class="video-container">
