--- a/fase1/fase1.html
+++ b/fase1/fase1.html
@@ -4,20 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Fase 1 - Presentación</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; display: flex; flex-direction: column; min-height: 100vh; }
-    header, footer { background: #333; color: #fff; padding: 10px 20px; text-align: center; }
-    nav { background: #444; overflow: hidden; }
-    nav a { float: left; color: #fff; padding: 14px 16px; text-decoration: none; }
-    nav a:hover { background: #ddd; color: #000; }
-    main { flex: 1; padding: 20px; max-width: 1000px; margin: auto; background: white; }
-    .carousel-container { text-align: center; position: relative; max-width: 800px; margin: 20px auto; }
-    .carousel-container img { width: 100%; height: auto; display: none; transition: opacity 0.5s ease-in-out; }
-    .carousel-container img.active { display: block; }
-    .controls { margin-top: 10px; }
-    .controls button { padding: 10px 20px; margin: 5px; cursor: pointer; }
-    .social-links a { margin: 0 10px; text-decoration: none; color: white; }
-  </style>
+  <link rel="stylesheet" href="/CSS/style.css" />
   <link rel="stylesheet" href="/fase1/fase1.css" />
 </head>
 <body>
