--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inicio - Proyecto Manejo de Residuos Sólidos</title>
   <link rel="stylesheet" href="/CSS/style.css" />
+  
 </head>
 <body>
   <header>
     <h1>Proyecto sobre Manejo de Residuos Sólidos</h1>
   </header>
-  <nav>
-    <a href="/index.html">Inicio</a>
-    <a href="/objetivo_general.html">Objetivo General</a>
-    <a href="/objetivo_especifico.html">Objetivos Específicos</a>
-    <a href="/justificacion.html">Justificación</a>
+ <nav>
+    <a href="index.html">Inicio</a>
+    <a href="objetivo_general.html">Objetivo General</a>
+    <a href="objetivo_especifico.html">Objetivos Específicos</a>
+    <a href="justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
-    <a href="/fase3/fase3.html">Fase 3</a>
-    <a href="/fase4/fase4.html">Fase 4</a>
-    <a href="/fase5/fase5.html">Fase 5</a>
-    <a href="/fase6/fase6.html">Fase 6</a>
+    <a href="fase3/index.html">Fase 3</a>
+    <a href="fase4/index.html">Fase 4</a>
+    <a href="fase5/index.html">Fase 5</a>
+    <a href="fase6/index.html">Fase 6</a>
+  </nav>
+  </div>
   </nav>
   <main>
     <h2>Bienvenido al proyecto “Recicla Cancún”</h2>
