se terminaron de ajustar todos los css y botones

--- a/fase2/fase2.html
+++ b/fase2/fase2.html
@@ -122,14 +122,15 @@
 </div>
 </main>
 <footer>
-  <p>&copy; 2025 Prepa en Línea SEP</p>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
   <div class="social-links">
-    <span>Síguenos:</span>
-    <a href="https://facebook.com/ReciclaCancun" target="_blank">Facebook</a>
-    <a href="https://twitter.com/ReciclaCancun" target="_blank">Twitter</a>
-    <a href="https://instagram.com/ReciclaCancun" target="_blank">Instagram</a>
-    <a href="https://youtube.com/ReciclaCancun" target="_blank">YouTube</a>
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
   </div>
-  <footer><p>&copy; 2025 Prepa en Línea SEP</p></footer>
+</footer>
 </body>
 </html>
