--- a/fase3/fase3.html
+++ b/fase3/fase3.html
@@ -38,7 +38,7 @@
       <img class="diagrama" src="/img/Diagrama de flujo.png" alt="Diagrama de flujo del proyecto">
     </div>
 
-    <video width="100%" controls>
+    <video class="video-container" width="100%" controls>
       <source src="/video/Video Medio Ambiente Collage Verde.mp4" type="video/mp4">
       Tu navegador no soporta la reproducción de video.
     </video>
@@ -129,8 +129,16 @@
     </ul>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+  <div class="social-links">
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
+  </div>
+</footer>
 </body>
 </html>
