--- a/fase4/fase4.html
+++ b/fase4/fase4.html
@@ -95,15 +95,17 @@
     </ul>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
-    <div class="social-links">
-      <a href="https://facebook.com" target="_blank">Facebook</a> |
-      <a href="https://twitter.com" target="_blank">Twitter</a> |
-      <a href="https://instagram.com" target="_blank">Instagram</a> |
-      <a href="https://youtube.com" target="_blank">YouTube</a>
-    </div>
-  </footer>
+<footer>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+  <div class="social-links">
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
+  </div>
+</footer>
 </body>
 </html>
 
