--- a/justificacion.html
+++ b/justificacion.html
@@ -25,8 +25,9 @@
     <a href="fase6/index.html">Fase 6</a>
   </nav>
 
-  <main>
+  <main  class="texto">
     <h2>Justificación</h2>
+    
     <p>El proyecto Recicla Cancún inicia como respuesta a la creciente problemática del 
       manejo inadecuado de residuos sólidos en entornos escolares de la ciudad. En Cancún,
        una parte considerable de los desechos no es reciclada correctamente, lo que genera 
@@ -61,7 +62,15 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
-  </footer>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+    <div class="social-links">
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
+  </div>
+</footer>
 </body>
 </html>
