--- a/objetivo_especifico.html
+++ b/objetivo_especifico.html
@@ -25,15 +25,24 @@
     <a href="fase6/index.html">Fase 6</a>
   </nav>
 
-  <main>
+  <main class="texto">
     <h2>Objetivos Específicos</h2>
-    <p>Desarrollar una aplicación móvil con contenidos interactivos para educar a la 
+
+    <p  >Desarrollar una aplicación móvil con contenidos interactivos para educar a la 
       comunidad escolar sobre separación de residuos y reciclaje responsable, 
       en un plazo de dos meses.</p>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+  <div class="social-links">
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
+  </div>
+</footer>
 </body>
 </html>
