--- a/objetivo_general.html
+++ b/objetivo_general.html
@@ -5,15 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Objetivo General</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f4f4f4; }
-    header, footer { background-color: #333; color: white; padding: 10px 20px; text-align: center; }
-    nav { background-color: #444; overflow: hidden; }
-    nav a { float: left; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
-    nav a:hover { background-color: #ddd; color: black; }
-    main { padding: 20px; max-width: 1000px; margin: auto; background: white; }
-    h2 { color: #333; }
-  </style>
+<link rel="stylesheet" href="/CSS/style.css" />
 </head>
 <body>
   <header>
@@ -33,16 +25,25 @@
     <a href="fase6/index.html">Fase 6</a>
   </nav>
 
-  <main>
-    <h2>Objetivo General</h2>
+  <main class="texto">
+    <h2>Objetivo General</h2> 
+
     <p>Diseñar e implementar un sistema integral de gestión de residuos en una comunidad 
       escolar de Cancún durante un periodo de seis meses, utilizando tecnologías 
       emergentes como sensores IoT y una aplicación móvil educativa, para reducir al 
       menos en un 30% los residuos sólidos no reciclados.</p>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+  <div class="social-links">
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
+  </div>
+</footer>
 </body>
 </html>
