--- a/index.html
+++ b/index.html
@@ -18,28 +18,30 @@
     <a href="justificacion.html">Justificación</a>
     <a href="/fase1/fase1.html">Fase 1</a>
     <a href="/fase2/fase2.html">Fase 2</a>
-    <a href="fase3/index.html">Fase 3</a>
-    <a href="fase4/index.html">Fase 4</a>
-    <a href="fase5/index.html">Fase 5</a>
-    <a href="fase6/index.html">Fase 6</a>
+    <a href="/fase3/fase3.html">Fase 3</a>
+    <a href="/fase4/fase4.html">Fase 4</a>
+    <a href="/fase5/fase5.html">Fase 5</a>
+    <a href="/fase6/fase6.html">Fase 6</a>
   </nav>
   </div>
   </nav>
   <main>
     <h2>Bienvenido al proyecto “Recicla Cancún”</h2>
-    <p>Este sitio presenta todas las fases del proyecto desarrollado por Abraham Alejandro Huerta Aguirre para la Prepa en Línea SEP, Módulo 23. Consulta cada etapa, recursos y resultados.</p>
-      <div class="video-container">
+    <p   class="texto">Este sitio presenta todas las fases del proyecto desarrollado por 
+      Abraham Alejandro Huerta Aguirre para la Prepa en Línea SEP, Módulo 23 grupo M23C2G48-027. 
+      Consulta cada etapa, recursos y resultados.</p>
+      <div>
       <h2>Video de presentación</h2>
-      <video width="100%" controls>
+      <video class="video-container" width="100%" controls>
         <source src="" type="video/mp4">
         Tu navegador no soporta la reproducción de video.
         <!-- Video de presentación con controles personalizados -->
-<div class="video-container">
+<div>
   <h2>Video de presentación</h2>
   <video id="intro-video" width="100%">
     <source src="video/Video Medio Ambiente Collage Verde.mp4" type="video/mp4">
     Tu navegador no soporta la reproducción de video.
-  </video>
+  </video >
   <div class="video-controls">
     <button id="play-btn">► Play</button>
     <button id="pause-btn">❚❚ Pausa</button>
@@ -49,14 +51,7 @@
 </div>
 
 <style>
-.video-container { text-align: center; margin: 20px 0; }
-.video-controls { margin-top: 10px; }
-.video-controls button {
-  padding: 8px 12px;
-  margin: 0 5px;
-  font-size: 14px;
-  cursor: pointer;
-}
+
 </style>
 
 <script>
@@ -77,16 +72,17 @@
       </video>
     </div>
   </main>
-  <footer>
-    <p>&copy; 2025 Prepa en Línea SEP</p>
-    <div class="social-links">
-      <span>Síguenos:</span>
-      <a href="https://facebook.com/ReciclaCancun" target="_blank">Facebook</a>
-      <a href="https://twitter.com/ReciclaCancun" target="_blank">Twitter</a>
-      <a href="https://instagram.com/ReciclaCancun" target="_blank">Instagram</a>
-      <a href="https://youtube.com/ReciclaCancun" target="_blank">YouTube</a>
-    </div>
-    <p>&copy; 2025 Prepa en Línea SEP</p>
-  </footer>
+
+<footer>
+  <p>&copy; 2025 Proyecto Educativo Prepa en Línea-SEP</p>
+  <div class="social-links">
+    <span class="span">Síguenos:</span>
+    <a class="social-button" href="https://facebook.com" target="_blank">Facebook</a>
+    <a class="social-button" href="https://twitter.com" target="_blank">Twitter</a>
+    <a class="social-button" href="https://instagram.com" target="_blank">Instagram</a>
+    <a class="social-button" href="https://youtube.com" target="_blank">YouTube</a>
+    <a class="social-button" href="https://github.com/AlexHuerta1133/Tarea-fase-final.git" target="_blank">GitHub</a>
+  </div>
+</footer>
 </body>
 </html>
